MySQLの設定を更新

--- a/config/my.cnf
+++ b/config/my.cnf
@@ -3,6 +3,16 @@ character_set_server = utf8mb4
 collation_server = utf8mb4_ja_0900_as_cs
 default_authentication_plugin=mysql_native_password
 
+# 実行SQLログ出力
+general_log = 1
+log_output = 'FILE'
+general_log_file = /var/log/mysql/mysql.log
+
+# スロークエリログ
+slow_query_log = 1
+long_query_time = 1
+slow_query_log_file = /var/log/mysql/slow_query.log
+
 [mysql]
 default-character-set = utf8mb4
 
